# crossdomain-object-tracker

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  hf-spaces.yml
configs/: datasets.yaml  models.yaml
docs/: index.html  results.json
hf_space/: README.md  app.py  requirements.txt
notebooks/: quickstart.ipynb
scripts/: download_datasets.py  generate_demo_gif.py  generate_demo_images.py  generate_gallery.py  run_demo.py
src/crossdomain_object_tracker/: __init__.py  cli.py  evaluate.py  report.py  visualize.py
src/crossdomain_object_tracker/common/: __init__.py  config.py  download.py
src/crossdomain_object_tracker/detector/: __init__.py  grounding_dino.py  yolo.py
src/crossdomain_object_tracker/metrics/: coco_eval.py
src/crossdomain_object_tracker/tracker/: __init__.py  byte_tracker.py
tests/: test_cli.py  test_coco_eval.py  test_config.py  test_download.py  test_evaluate.py  test_latex.py  test_tracker.py  test_visualize.py
